--- a/personal-website/package.json
+++ b/personal-website/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.3",
     "react-social-media-embed": "^2.5.18",
     "web-vitals": "^2.1.4"
   },
