added github and devpost link to embr project

--- a/src/components/projectData.json
+++ b/src/components/projectData.json
@@ -12,9 +12,9 @@
       "Node.js",
       "Express.js"
     ],
-    "githubLink": "https://github.com/your-username/embr-nwhacks",
+    "githubLink": "https://github.com/minhVu03/nwHacks2025",
     "websiteLink": null,
-    "devpostLink": "https://devpost.com/software/embr-nwhacks-2025"
+    "devpostLink": "https://devpost.com/software/embr-fires"
   },
   {
     "title": "Personal Finance & Expense Tracker",
